# PCOS_Detection

./: Makefile  README.md  SetYouUp.ipynb  pyproject.toml  requirements.txt
pcos_detection/: __init__.py  config.py  dataset.py  features.py  plots.py
pcos_detection/modeling/: predict.py  train.py
