[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pcos_detection"
version = "0.0.1"
description = "This project aims to develop a machine learning model to detect Polycystic Ovary Syndrome (PCOS) using clinical and diagnostic data. The notebook includes data preprocessing, exploratory data analysis, feature engineering, model training, evaluation, and interpretation of results. The goal is to assist healthcare professionals in identifying PCOS cases more efficiently and accurately."
authors = [
  { name = "Agam Singh Saini" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "pip",
    "python-dotenv",
    "tqdm",
    "typer",
    "pandas (>=2.3.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "imblearn (>=0.0,<0.1)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
]
requires-python = "^3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["pcos_detection"]
force_sort_within_sections = true


